# Sonar

./: .gitignore  README.md  SkeletonCard.qml  Sonar.spec  THIRD_PARTY_LICENSES.md  UI_MANIFEST.md  airplay_manager.py  album_detail.qml  album_grid.qml  albums_browser.py  artist_detail.qml  artist_grid.qml  artist_info_panel.py  artist_section_grid.qml  artists_browser.py  audio_core.cpp  audio_engine.py  build.py  build_appimage.py  build_exe.py  cast_manager.py  components.py  cover_cache.py  debug_perf.py  favorites_view.py  home.py  home.qml  home_row.qml  home_widgets.py  left_panel.py  left_panel.qml  libconfuse-dev_3.3-4_amd64.deb  libplist-dev_2.6.0-2build1_amd64.deb  libunistring-dev_1.3-2_amd64.deb  login_dialog.py  lyrics_panel.py  main.py  now_playing.py  now_playing_info.py  playlist_grid.qml  (+11 more)
.claude/: settings.local.json
.github/workflows/: build.yml
airplay/lib/linux-x86_64/: libavfilter.so.8.44.100  libavformat.so.59.27.100  libavutil.so.57.28.100  libconfuse.so.2.1.0  libplist-2.0.so.3.3.0  libswresample.so.4.7.100
player/: __init__.py  qml_search.py  scroll_tuning.py  theme.py  widgets.py  window.py  workers.py
player/components/: airplay_manager.py  artist_info_panel.py  audio_core.cpp  audio_engine.py  cast_manager.py  cover_cache.py  debug_perf.py  hotkeys.py  login_dialog.py  shared_widgets.py  spotlight_search.py  subsonic_client.py  tetris_easter_egg.py  theme_builder.py
player/mixins/: __init__.py  keyboard.py  navigation.py  persistence.py  playback.py  visuals.py
player/native/scratch_waveform/: CMakeLists.txt  scratchwaveformitem.cpp  scratchwaveformitem.h
player/panels/footer/: __init__.py  footer_bar.qml  footer_bridge.py  waveform_renderer.py  waveform_scrubber.py
player/panels/left/: left_panel.py  left_panel.qml
player/panels/main/: __init__.py
player/panels/right/: lyrics_panel.py  queue_list.qml  queue_panel.py  queue_tree.py
player/tabs/albums/: album_detail.qml  album_grid.qml  albums_browser.py
player/tabs/artists/: artist_about.qml  artist_detail_page.qml  artist_grid.qml  artist_section_grid.qml  artists_browser.py
player/tabs/favorites/: favorites.qml  favorites_view.py
player/tabs/home/: home.py  (+1 more)
player/themes/: cream.json  dark.json  light.json  test.json
(+18 files in other folders)
